atualizaçao cadastro de unidade

--- a/Infraero.Relprev.WebUi/Views/UnidadeInfraestrutura/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/UnidadeInfraestrutura/Create.cshtml
@@ -50,6 +50,7 @@
                                    v-model="UnidadeInfraEstruturaDto.Dependencia.dep_sigla_nome"
                                    title="Aeroporto nao pesquisado a partir da sigla informada." required>
                             @*<input type="hidden" id="CodDependencia" name="CodDependencia" value="UnidadeInfraEstruturaDto.Dependencia.dep_codigo" />*@
+                            <input type="hidden" >
                         </div>
                     </div>
                     <div class="form-group row">
