--- a/Infraero.Relprev.WebUi/Views/ConfigurarAmbiente/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/ConfigurarAmbiente/Index.cshtml
@@ -24,7 +24,7 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2"></label>
                         <div class="col-sm-9">
-                            <h4 class="pt-3 mb-0">Tempo de resposta do parecer</h4>
+                            <h4 class="pt-3 mb-0">Tempo de resposta (em dias)</h4>
 
                         </div>
                     </div>
