--- a/Infraero.Relprev.WebUi/Views/Local/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Local/Create.cshtml
@@ -31,6 +31,9 @@
                         <div class="col-sm-9">
                             <textarea type="text" rows="3" name="DscLocal" class="form-control" placeholder="eg.: Descrição do  sub assunto relacionado as  ocorrências  " required maxlength="50"></textarea>
                         </div>
+                        <label class="col-sm-3 control-label text-sm-right pt-2"></label>
+
+                        <label class="col-sm-9 control-label text-sm-left pt-2"><span class="required">* Verificar orientações da empresa para cadastro do Local de Ocorrência</span></label>
                     </div>
                 </div>
                 <footer class="card-footer">
