--- a/Infraero.Relprev.WebUi/Views/Relato/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Relato/Create.cshtml
@@ -104,9 +104,23 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label class="col-sm-3 control-label text-sm-right pt-2">Nome do arquivo</label>
-                        <div class="col-sm-9">
-                            <input type="text" name="fullname" class="form-control" placeholder="eg.: Descrição do nome do arquivo de anexo" maxlength="60" />
+                        <label class="col-lg-3 control-label text-lg-right pt-2">Nome do arquivo</label>
+                        <div class="col-lg-6">
+                            <div class="fileupload fileupload-new" data-provides="fileupload">
+                                <div class="input-append">
+                                    <div class="uneditable-input">
+                                        <i class="fa fa-file fileupload-exists"></i>
+                                        <span class="fileupload-preview"></span>
+                                    </div>
+                                    <span class="btn btn-default btn-file">
+                                        <span class="fileupload-exists">Alterar</span>
+                                        <span class="fileupload-new">Selecione o arquivo</span>
+                                        <input type="file" />
+                                    </span>
+                                    <a href="#" class="btn btn-default fileupload-exists" data-dismiss="fileupload">Remover</a>
+                                    <a href="#" class="btn btn-default fileupload-exists" data-dismiss="fileupload">Anexar</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="form-group row">
@@ -141,11 +155,13 @@
     <link rel="stylesheet" href="~/vendor/select2/css/select2.css" />
     <link rel="stylesheet" href="~/vendor/select2-bootstrap-theme/select2-bootstrap.min.css" />
     <link rel="stylesheet" href="vendor/bootstrap-timepicker/css/bootstrap-timepicker.css" />
+    <link rel="stylesheet" href="~/vendor/bootstrap-fileupload/bootstrap-fileupload.min.css" />
 
 }
 @section Scripts {
     <script src="~/vendor/select2/js/select2.js"></script>
     <script src="vendor/bootstrap-timepicker/bootstrap-timepicker.js"></script>
+    <script src="~/vendor/bootstrap-fileupload/bootstrap-fileupload.min.js"></script>
     <script>
         // TimePicker
         (function ($) {
@@ -217,8 +233,8 @@
              * When you change the value the select via select2, it triggers
              * a 'change' event, but the jquery validation plugin
              * only re-validates on 'blur'*/
-             
-            $select.on('change', function() {
+
+            $select.on('change', function () {
                 $(this).trigger('blur');
             });
 
@@ -230,12 +246,12 @@
 
 
             // checkbox, radio and selects
-            $("#chk-radios-form, #form").each(function() {
+            $("#chk-radios-form, #form").each(function () {
                 $(this).validate({
-                    highlight: function(element) {
+                    highlight: function (element) {
                         $(element).closest('.form-group').removeClass('has-success').addClass('has-error');
                     },
-                    success: function(element) {
+                    success: function (element) {
                         $(element).closest('.form-group').removeClass('has-error');
                     }
                 });
