--- a/Infraero.Relprev.WebUi/Views/Local/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Local/Edit.cshtml
@@ -30,6 +30,8 @@
                         <label class="col-sm-3 control-label text-sm-right pt-2">Local de Ocorrência <span class="required">*</span></label>
                         <div class="col-sm-9">
                             <textarea type="text" rows="3" name="DscLocal" class="form-control" placeholder="eg.: Descrição do  sub assunto relacionado as  ocorrências  " required maxlength="50">@Model.Local.DscLocal</textarea>
+                            <label class="col-sm-3 control-label text-sm-right pt-2"></label>
+                            <label class="col-sm-9 control-label text-sm-left pt-2"><span class="required">* Verificar orientações da empresa para cadastro do Local de Ocorrência</span></label>
                         </div>
                     </div>
                 </div>
