--- a/Infraero.Relprev.WebUi/Views/Parecer/Reply.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Parecer/Reply.cshtml
@@ -111,7 +111,7 @@
                             <div class="toggle toggle-primary" data-plugin-toggle>
 
                                 <section class="toggle">
-                                    <label>Curabitur eget leo at velit imperdiet vague iaculis vitaes?</label>
+                                    <label>&nbsp;</label>
                                     <div class="toggle-content">
                                         <div class="form-group row">
                                             <label class="col-sm-3 control-label text-sm-right pt-2">Descrição do parecer técnico <span class="required">*</span></label>
@@ -152,6 +152,12 @@
                             </div>
                         </div>
 
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-sm-3 control-label text-sm-right pt-2">Descrição do relato da Classificação <span class="required">*</span></label>
+                        <div class="col-sm-9">
+                            <textarea type="text" rows="3" name="fullname" class="form-control" placeholder="eg.: Descrição do relato da Classificação" required maxlength="500"></textarea>
+                        </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Descrição do parecer<span class="required">*</span></label>
