--- a/Infraero.Relprev.WebUi/Views/UnidadeInfraestrutura/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/UnidadeInfraestrutura/Create.cshtml
@@ -20,7 +20,7 @@
                     <h2 class="card-title">Cadastrar Unidade de Infraestrutura</h2>
 
                 </header>
-                <div class="card-body">
+                <div id="vUnidade" class="card-body" data-loading-overlay>
                     <div class="form-group row">
                         <label class="col-lg-3 control-label text-lg-right pt-2">Sigla <span class="required">*</span></label>
                         <div class="col-lg-9">
@@ -32,9 +32,11 @@
                             <div class="input-group mb-3">
                                 <input type="text" id="sigla" name="sigla" class="form-control" placeholder="eg.: Sigla" maxlength="4"
                                        title="Por favor informe uma sigla para pesquisar os dados de endereço." required
+                                       style="z-index: auto;"
                                        v-model="params.sigla">
                                 <span class="input-group-btn">
                                     <button id="dependencia" v-on:click="GetUnidadeBySigla"
+                                            style="z-index: auto;"
                                             class="btn btn-primary" type="button">
                                         &nbsp;&nbsp;<i class="fa fa-search"></i>
                                     </button>
@@ -50,7 +52,7 @@
                                    v-model="UnidadeInfraEstruturaDto.Dependencia.dep_sigla_nome"
                                    title="Aeroporto nao pesquisado a partir da sigla informada." required>
                             @*<input type="hidden" id="CodDependencia" name="CodDependencia" value="UnidadeInfraEstruturaDto.Dependencia.dep_codigo" />*@
-                            <input type="hidden" >
+                            <input type="hidden">
                         </div>
                     </div>
                     <div class="form-group row">
@@ -90,6 +92,7 @@
                                 </span>
                                 <input id="DtIniVigencia" name="DtIniVigencia"
                                        title="Por favor informe a data início de vigência." required
+                                       style="z-index: auto;"
                                        data-plugin-datepicker data-date-format="dd/mm/yyyy" data-plugin-options='{"language": "pt-BR"}'
                                        placeholder="__/__/____" class="form-control">
                             </div>
@@ -103,6 +106,7 @@
                                 </span>
                                 <input id="DtFimVigencia" name="DtFimVigencia"
                                        title="Por favor informe a data fim de vigência." required
+                                       style="z-index: auto;"
                                        data-plugin-datepicker data-date-format="dd/mm/yyyy" data-plugin-options='{"language": "pt-BR"}'
                                        placeholder="__/__/____" class="form-control">
                             </div>
