--- a/Infraero.Relprev.WebUi/Views/Assunto/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Assunto/Create.cshtml
@@ -7,7 +7,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        @using (@Html.BeginForm("Create", "Assunto", FormMethod.Post))
+        @using (@Html.BeginForm("Create", "Assunto", FormMethod.Post, new { id = "form" }))
         {
             <section class="card">
                 <header class="card-header">
@@ -23,7 +23,10 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Assunto <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <textarea type="text" rows="3" name="DscAssunto" class="form-control" placeholder="eg.: Descrição do  assunto relacionado as  ocorrências " required maxlength="50"></textarea>
+                            <textarea type="text" rows="3" name="DscAssunto" class="form-control"
+                                      title="Por favor informe a descrição do  assunto relacionado as  ocorrências " 
+                                      placeholder="eg.: Descrição do  assunto relacionado as  ocorrências " 
+                                      required maxlength="255"></textarea>
                         </div>
                     </div>
                 </div>
@@ -44,6 +47,32 @@
 @section CssSpecificVendor {
 }
 @section Scripts {
+    <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
+
+    <script>
+
+            // Select2
+            (function ($) {
+
+                'use strict';
+
+
+
+                // checkbox, radio and selects
+                $("#form").each(function() {
+                    $(this).validate({
+                        highlight: function(element) {
+                            $(element).closest('.form-group').removeClass('has-success').addClass('has-error');
+                        },
+                        success: function(element) {
+                            $(element).closest('.form-group').removeClass('has-error');
+                        }
+                    });
+                });
+
+            }).apply(this, [jQuery]);
+
+    </script>
 
 }
 
