--- a/Infraero.Relprev.WebUi/Views/Empresa/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Empresa/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        @using (@Html.BeginForm("Edit", "Empresa", FormMethod.Post))
+        @using (@Html.BeginForm("Edit", "Empresa", FormMethod.Post, new { id = "form" }))
         {
             <section class="card">
                 <header class="card-header">
@@ -28,7 +28,7 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">CPNJ </label>
                         <div class="col-sm-9">
-                            <input type="text" name="cnpj" class="form-control" data-input-mask="99.999.999/9999-99" value="@Model.NumCnpj" placeholder="eg.: CNPJ da empresa / órgão público" maxlength="18"/>
+                            <input type="text" name="cnpj" class="form-control" data-input-mask="99.999.999/9999-99" value="@Model.NumCnpj" placeholder="eg.: CNPJ da empresa / órgão público" maxlength="18" />
                         </div>
                     </div>
                     <div class="form-group row">
@@ -58,37 +58,34 @@
     </div>
 </div>
 @section CssSpecificVendor {
-    <link rel="stylesheet" href="~/vendor/select2/css/select2.css" />
-    <link rel="stylesheet" href="~/vendor/select2-bootstrap-theme/select2-bootstrap.min.css" />
 }
 @section Scripts {
-    <script src="~/vendor/select2/js/select2.js"></script>
-
+    <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
     <script>
-        // Select2
-        (function($) {
+        (function ($) {
 
             'use strict';
 
-            if ( $.isFunction($.fn[ 'select2' ]) ) {
-
-                $(function() {
-                    $('[data-plugin-selectTwo]').each(function() {
-                        var $this = $( this ),
-                            opts = {};
-
-                        var pluginOptions = $this.data('plugin-options');
-                        if (pluginOptions)
-                            opts = pluginOptions;
-
-                        $this.themePluginSelect2(opts);
-                    });
-                });
-
-            }
+            $("#form").validate({
+                highlight: function (label) {
+                    $(label).closest('.form-group').removeClass('has-success').addClass('has-error');
+                },
+                success: function (label) {
+                    $(label).closest('.form-group').removeClass('has-error');
+                    label.remove();
+                },
+                errorPlacement: function (error, element) {
+                    var placement = element.closest('.input-group');
+                    if (!placement.get(0)) {
+                        placement = element;
+                    }
+                    if (error.text() !== '') {
+                        placement.after(error);
+                    }
+                }
+            });
 
         }).apply(this, [jQuery]);
-
     </script>
 }
 
